--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.16.13",
     "bootstrap": "^5.1.1",
+    "components": "^0.1.0",
     "firebase": "^9.0.2",
     "firebase-tools": "^9.18.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "^7.2.5",
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "styled": "^1.0.0",
+    "styled-components": "^5.3.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
